--- a/components/navbar.html
+++ b/components/navbar.html
@@ -18,69 +18,69 @@
     <nav class="navigation-bar" id="main-nav">
         <div class="container">
             <ul class="nav-menu">
-                <li><a href="#" class="nav-link active">প্রচ্ছদ</a></li>
+                <li><a href="../index.html" class="nav-link active">প্রচ্ছদ</a></li>
                 <li class="dropdown">
                     <a href="#" class="nav-link">আমাদের কথা <i class="fas fa-chevron-down"></i></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">উপাচার্যের বাণী</a></li>
-                        <li><a href="#">পরিচালকের বাণী</a></li>
-                        <li><a href="#">অধ্যক্ষের বাণী</a></li>
-                        <li><a href="#">ব্যবস্থাপনা কমিটি</a></li>
-                        <li><a href="#">লক্ষ্য ও উদ্দেশ্য</a></li>
-                        <li><a href="#">অর্জন ও সাফল্য</a></li>
+                        <li><a href="../pages/vc-message.html">উপাচার্যের বাণী</a></li>
+                        <li><a href="../pages/director-message.html">পরিচালকের বাণী</a></li>
+                        <li><a href="../pages/principal-message.html">অধ্যক্ষের বাণী</a></li>
+                        <li><a href="../pages/management-committee.html">ব্যবস্থাপনা কমিটি</a></li>
+                        <li><a href="../pages/aims-objectives.html">লক্ষ্য ও উদ্দেশ্য</a></li>
+                        <li><a href="../pages/achievements.html">অর্জন ও সাফল্য</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="nav-link">একাডেমিক <i class="fas fa-chevron-down"></i></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">আচরণবিধি</a></li>
-                        <li><a href="#">অভিভাবকের জন্য নির্দেশিকা</a></li>
-                        <li><a href="#">পোশাকরীতি</a></li>
-                        <li><a href="#">পাঠ পরিকল্পনা</a></li>
-                        <li><a href="#">একাডেমিক ক্যালেন্ডার</a></li>
-                        <li><a href="#">পরিক্ষার সময়সূচি</a></li>
-                        <li><a href="#">ফলাফল</a></li>
-                        <li><a href="#">সহশিক্ষাক্রমিক কার্যাবলী</a></li>
+                        <li><a href="../pages/code-of-conduct.html">আচরণবিধি</a></li>
+                        <li><a href="../pages/guardian-guidelines.html">অভিভাবকের জন্য নির্দেশিকা</a></li>
+                        <li><a href="../pages/dress-code.html">পোশাকরীতি</a></li>
+                        <li><a href="../pages/lesson-plan.html">পাঠ পরিকল্পনা</a></li>
+                        <li><a href="../pages/academic-calendar.html">একাডেমিক ক্যালেন্ডার</a></li>
+                        <li><a href="../pages/exam-routine.html">পরিক্ষার সময়সূচি</a></li>
+                        <li><a href="../pages/results.html">ফলাফল</a></li>
+                        <li><a href="../pages/co-curricular.html">সহশিক্ষাক্রমিক কার্যাবলী</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="nav-link">তথ্য <i class="fas fa-chevron-down"></i></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">শিক্ষক পরিচিতি</a></li>
-                        <li><a href="#">শিক্ষার্থীর পরিচিতি</a></li>
-                        <li><a href="#">কর্মকর্তা কর্মচারী পরিচিতি</a></li>
-                        <li><a href="#">ছুটির তালিকা</a></li>
-                        <li><a href="#">নোটিশবোর্ড</a></li>
-                        <li><a href="#">সুযোগসুবিধা</a></li>
-                        <li><a href="#">লাইব্রেরী</a></li>
+                        <li><a href="../pages/teachers.html">শিক্ষক পরিচিতি</a></li>
+                        <li><a href="../pages/students.html">শিক্ষার্থীর পরিচিতি</a></li>
+                        <li><a href="../pages/staff.html">কর্মকর্তা কর্মচারী পরিচিতি</a></li>
+                        <li><a href="../pages/holiday-list.html">ছুটির তালিকা</a></li>
+                        <li><a href="../pages/noticeboard.html">নোটিশবোর্ড</a></li>
+                        <li><a href="../pages/facilities.html">সুযোগসুবিধা</a></li>
+                        <li><a href="../pages/library.html">লাইব্রেরী</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="nav-link">ক্যাম্পাস <i class="fas fa-chevron-down"></i></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">ফটো গ্যালারী</a></li>
-                        <li><a href="#">ভিডিও গ্যালারী</a></li>
+                        <li><a href="../pages/photo-gallery.html">ফটো গ্যালারী</a></li>
+                        <li><a href="../pages/video-gallery.html">ভিডিও গ্যালারী</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="nav-link">ভর্তি কার্যক্রম <i class="fas fa-chevron-down"></i></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">অনলাইন ভর্তি আবেদন</a></li>
-                        <li><a href="#">সংক্ষিপ্ত তথ্যাবলী</a></li>
-                        <li><a href="#">ফিস ও পেমেন্টস্</a></li>
+                        <li><a href="https://ulscdu.eabedon.com/" target="_blank">অনলাইন ভর্তি আবেদন</a></li>
+                        <li><a href="../pages/admission-info.html">সংক্ষিপ্ত তথ্যাবলী</a></li>
+                        <li><a href="../pages/fees-payment.html">ফিস ও পেমেন্টস্</a></li>
                     </ul>
                 </li>
-                <li><a href="#" class="nav-link">শিক্ষক পোর্টাল</a></li>
-                <li><a href="#" class="nav-link">শিক্ষার্থী পোর্টাল</a></li>
+                <li><a href="../pages/teacher-portal.html" class="nav-link">শিক্ষক পোর্টাল</a></li>
+                <li><a href="../pages/student-portal.html" class="nav-link">শিক্ষার্থী পোর্টাল</a></li>
                 <li class="dropdown">
                     <a href="#" class="nav-link">স্বাধীনতার সুবর্ণ জয়ন্তী কর্নার <i class="fas fa-chevron-down"></i></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">নোটিশ</a></li>
-                        <li><a href="#">ভিডিও গ্যালারী</a></li>
-                        <li><a href="#">ছবির গ্যালারী</a></li>
+                        <li><a href="../pages/jubilee-notices.html">নোটিশ</a></li>
+                        <li><a href="../pages/jubilee-video-gallery.html">ভিডিও গ্যালারী</a></li>
+                        <li><a href="../pages/jubilee-photo-gallery.html">ছবির গ্যালারী</a></li>
                     </ul>
                 </li>
-                <li><a href="#" class="nav-link">যোগাযোগ</a></li>
+                <li><a href="../pages/contact.html" class="nav-link">যোগাযোগ</a></li>
             </ul>
         </div>
     </nav>
@@ -93,17 +93,17 @@
             </div>
             <div class="notice-ticker">
                 <div class="ticker-content">
-                    <a href="#">***টাইফয়েড টিকাদান ক্যাম্পেইন-২০২৫ সংক্রান্ত জরুরী বিজ্ঞপ্তি***</a>
-                    <a href="#">***অষ্টম শ্রেণির বোর্ড রেজিস্ট্রেশন খরচ বৃদ্ধি সংক্রান্ত বিজ্ঞপ্তি***</a>
-                    <a href="#">***ছুটির বিজ্ঞপ্তি***</a>
-                    <a href="#">***১০ম শ্রেণির প্রাক-নির্বাচনি পরীক্ষার খাতা দেখানো ও নম্বর এন্টির বিজ্ঞপ্তি***</a>
-                    <a href="#">***২০২৫ সালের এসএসসি পরীক্ষায় বৃত্তি প্রাপ্ত শিক্ষার্থীদের জন্য বিজ্ঞপ্তি***</a>
-                    <a href="#">***দ্বাদশ শ্রেণিতে ভর্তির বিজ্ঞপ্তি***</a>
-                    <a href="#">***একাদশ শ্রেণির (শিক্ষাবর্ষ-২০২৫-২৬) ওরিয়েন্টেশন ক্লাস সংক্রান্ত বিজ্ঞপ্তি***</a>
-                    <a href="#">***২০২৫-২০২৬ শিক্ষাবর্ষে একাদশ শ্রেণিতে ভর্তির বিজ্ঞপ্তি (সংশোধিত)***</a>
-                    <a href="#">***৬ষ্ঠ শ্রেণির বোর্ড রেজিস্ট্রেশন খরচ বৃদ্ধি সংক্রান্ত বিজ্ঞপ্তি***</a>
-                    <a href="#">***অভিভাবকদের প্রতিষ্ঠানের ভিতরে প্রবেশ সংক্রান্ত বিজ্ঞপ্তি***</a>
-                    <a href="#">***বিশেষ বিজ্ঞপ্তি***</a>
+                    <a href="../notices/typhoid-vaccination-2025.html">***টাইফয়েড টিকাদান ক্যাম্পেইন-২০২৫ সংক্রান্ত জরুরী বিজ্ঞপ্তি***</a>
+                    <a href="../notices/class-8-registration-fee.html">***অষ্টম শ্রেণির বোর্ড রেজিস্ট্রেশন খরচ বৃদ্ধি সংক্রান্ত বিজ্ঞপ্তি***</a>
+                    <a href="../notices/holiday-notice.html">***ছুটির বিজ্ঞপ্তি***</a>
+                    <a href="../notices/class-10-pre-test-result.html">***১০ম শ্রেণির প্রাক-নির্বাচনি পরীক্ষার খাতা দেখানো ও নম্বর এন্টির বিজ্ঞপ্তি***</a>
+                    <a href="../notices/ssc-2025-scholarship.html">***২০২৫ সালের এসএসসি পরীক্ষায় বৃত্তি প্রাপ্ত শিক্ষার্থীদের জন্য বিজ্ঞপ্তি***</a>
+                    <a href="../notices/class-12-admission.html">***দ্বাদশ শ্রেণিতে ভর্তির বিজ্ঞপ্তি***</a>
+                    <a href="../notices/class-11-orientation-2025.html">***একাদশ শ্রেণির (শিক্ষাবর্ষ-২০২৫-২৬) ওরিয়েন্টেশন ক্লাস সংক্রান্ত বিজ্ঞপ্তি***</a>
+                    <a href="../notices/class-11-admission-2025.html">***২০২৫-২০২৬ শিক্ষাবর্ষে একাদশ শ্রেণিতে ভর্তির বিজ্ঞপ্তি (সংশোধিত)***</a>
+                    <a href="../notices/class-6-registration-fee.html">***৬ষ্ঠ শ্রেণির বোর্ড রেজিস্ট্রেশন খরচ বৃদ্ধি সংক্রান্ত বিজ্ঞপ্তি***</a>
+                    <a href="../notices/guardian-entry-notice.html">***অভিভাবকদের প্রতিষ্ঠানের ভিতরে প্রবেশ সংক্রান্ত বিজ্ঞপ্তি***</a>
+                    <a href="../notices/special-notice.html">***বিশেষ বিজ্ঞপ্তি***</a>
                 </div>
             </div>
         </div>
@@ -112,69 +112,69 @@
 
 <div class="sidebar-wrapper" id="sidebar-wrapper">
     <ul class="sidebar-menu">
-        <li><a href="#" class="nav-link active">প্রচ্ছদ</a></li>
+        <li><a href="../index.html" class="nav-link active">প্রচ্ছদ</a></li>
         <li class="dropdown">
             <a href="#" class="nav-link">আমাদের কথা <i class="fas fa-chevron-down"></i></a>
             <ul class="dropdown-menu">
-                <li><a href="#">উপাচার্যের বাণী</a></li>
-                <li><a href="#">পরিচালকের বাণী</a></li>
-                <li><a href="#">অধ্যক্ষের বাণী</a></li>
-                <li><a href="#">ব্যবস্থাপনা কমিটি</a></li>
-                <li><a href="#">লক্ষ্য ও উদ্দেশ্য</a></li>
-                <li><a href="#">অর্জন ও সাফল্য</a></li>
+                <li><a href="../pages/vc-message.html">উপাচার্যের বাণী</a></li>
+                <li><a href="../pages/director-message.html">পরিচালকের বাণী</a></li>
+                <li><a href="../pages/principal-message.html">অধ্যক্ষের বাণী</a></li>
+                <li><a href="../pages/management-committee.html">ব্যবস্থাপনা কমিটি</a></li>
+                <li><a href="../pages/aims-objectives.html">লক্ষ্য ও উদ্দেশ্য</a></li>
+                <li><a href="../pages/achievements.html">অর্জন ও সাফল্য</a></li>
             </ul>
         </li>
         <li class="dropdown">
             <a href="#" class="nav-link">একাডেমিক <i class="fas fa-chevron-down"></i></a>
             <ul class="dropdown-menu">
-                <li><a href="#">আচরণবিধি</a></li>
-                <li><a href="#">অভিভাবকের জন্য নির্দেশিকা</a></li>
-                <li><a href="#">পোশাকরীতি</a></li>
-                <li><a href="#">পাঠ পরিকল্পনা</a></li>
-                <li><a href="#">একাডেমিক ক্যালেন্ডার</a></li>
-                <li><a href="#">পরিক্ষার সময়সূচি</a></li>
-                <li><a href="#">ফলাফল</a></li>
-                <li><a href="#">সহশিক্ষাক্রমিক কার্যাবলী</a></li>
+                <li><a href="../pages/code-of-conduct.html">আচরণবিধি</a></li>
+                <li><a href="../pages/guardian-guidelines.html">অভিভাবকের জন্য নির্দেশিকা</a></li>
+                <li><a href="../pages/dress-code.html">পোশাকরীতি</a></li>
+                <li><a href="../pages/lesson-plan.html">পাঠ পরিকল্পনা</a></li>
+                <li><a href="../pages/academic-calendar.html">একাডেমিক ক্যালেন্ডার</a></li>
+                <li><a href="../pages/exam-routine.html">পরিক্ষার সময়সূচি</a></li>
+                <li><a href="../pages/results.html">ফলাফল</a></li>
+                <li><a href="../pages/co-curricular.html">সহশিক্ষাক্রমিক কার্যাবলী</a></li>
             </ul>
         </li>
         <li class="dropdown">
             <a href="#" class="nav-link">তথ্য <i class="fas fa-chevron-down"></i></a>
             <ul class="dropdown-menu">
-                <li><a href="#">শিক্ষক পরিচিতি</a></li>
-                <li><a href="#">শিক্ষার্থীর পরিচিতি</a></li>
-                <li><a href="#">কর্মকর্তা কর্মচারী পরিচিতি</a></li>
-                <li><a href="#">ছুটির তালিকা</a></li>
-                <li><a href="#">নোটিশবোর্ড</a></li>
-                <li><a href="#">সুযোগসুবিধা</a></li>
-                <li><a href="#">লাইব্রেরী</a></li>
+                <li><a href="../pages/teachers.html">শিক্ষক পরিচিতি</a></li>
+                <li><a href="../pages/students.html">শিক্ষার্থীর পরিচিতি</a></li>
+                <li><a href="../pages/staff.html">কর্মকর্তা কর্মচারী পরিচিতি</a></li>
+                <li><a href="../pages/holiday-list.html">ছুটির তালিকা</a></li>
+                <li><a href="../pages/noticeboard.html">নোটিশবোর্ড</a></li>
+                <li><a href="../pages/facilities.html">সুযোগসুবিধা</a></li>
+                <li><a href="../pages/library.html">লাইব্রেরী</a></li>
             </ul>
         </li>
         <li class="dropdown">
             <a href="#" class="nav-link">ক্যাম্পাস <i class="fas fa-chevron-down"></i></a>
             <ul class="dropdown-menu">
-                <li><a href="#">ফটো গ্যালারী</a></li>
-                <li><a href="#">ভিডিও গ্যালারী</a></li>
+                <li><a href="../pages/photo-gallery.html">ফটো গ্যালারী</a></li>
+                <li><a href="../pages/video-gallery.html">ভিডিও গ্যালারী</a></li>
             </ul>
         </li>
         <li class="dropdown">
             <a href="#" class="nav-link">ভর্তি কার্যক্রম <i class="fas fa-chevron-down"></i></a>
             <ul class="dropdown-menu">
-                <li><a href="#">অনলাইন ভর্তি আবেদন</a></li>
-                <li><a href="#">সংক্ষিপ্ত তথ্যাবলী</a></li>
-                <li><a href="#">ফিস ও পেমেন্টস্</a></li>
+                <li><a href="https://ulscdu.eabedon.com/" target="_blank">অনলাইন ভর্তি আবেদন</a></li>
+                <li><a href="../pages/admission-info.html">সংক্ষিপ্ত তথ্যাবলী</a></li>
+                <li><a href="../pages/fees-payment.html">ফিস ও পেমেন্টস্</a></li>
             </ul>
         </li>
-        <li><a href="#" class="nav-link">শিক্ষক পোর্টাল</a></li>
-        <li><a href="#" class="nav-link">শিক্ষার্থী পোর্টাল</a></li>
+        <li><a href="../pages/teacher-portal.html" class="nav-link">শিক্ষক পোর্টাল</a></li>
+        <li><a href="../pages/student-portal.html" class="nav-link">শিক্ষার্থী পোর্টাল</a></li>
         <li class="dropdown">
             <a href="#" class="nav-link">স্বাধীনতার সুবর্ণ জয়ন্তী কর্নার <i class="fas fa-chevron-down"></i></a>
             <ul class="dropdown-menu">
-                <li><a href="#">নোটিশ</a></li>
-                <li><a href="#">ভিডিও গ্যালারী</a></li>
-                <li><a href="#">ছবির গ্যালারী</a></li>
+                <li><a href="../pages/jubilee-notices.html">নোটিশ</a></li>
+                <li><a href="../pages/jubilee-video-gallery.html">ভিডিও গ্যালারী</a></li>
+                <li><a href="../pages/jubilee-photo-gallery.html">ছবির গ্যালারী</a></li>
             </ul>
         </li>
-        <li><a href="#" class="nav-link">যোগাযোগ</a></li>
+        <li><a href="../pages/contact.html" class="nav-link">যোগাযোগ</a></li>
     </ul>
 </div>
 
